--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,5 +1,8 @@
 .App {
     --header_height: 60px;
+    margin: 0 auto;
+    margin-top:131px;
+    width: 86%;
 }
 
 .hw {
@@ -7,5 +10,15 @@
 }
 
 .hwTitle {
+    border-bottom: 1px solid #D9D9D9;
+    padding-bottom: 10px;
+    padding-left: 70px;
+    font-family: Montserrat;
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 27px;
+    letter-spacing: 0em;
+    text-align: left;
+    margin-bottom: 24px;
 
 }
