--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,31 +1,78 @@
 .friendMessage {
-
+    width: 86%;
+    margin: 0 auto;
+    text-align: left;
+    position: relative;
+    margin-bottom: 47px;
 }
 
 .friendImageAndText {
-
+    display: inline-block;
+    position: relative;
 }
 
 .friendImageAndText img {
-
+    width: 48px;
+    /*position: absolute;*/
+    display: inline-block;
+    padding-top: 10px;
+    margin-right: 15px;
+    top:10px;
+    vertical-align: bottom;
 }
 
 .friendText {
-
+    display: inline-block;
+    width: 100%;
+    height: 60px;
+    padding: 10px 25px 7px 27px;
+    border-radius: 10px;
+    background: #F5F7FB;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
 }
 
 .friendText:after {
-
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 8%;
+    display: block;
+    width: 1px;
+    height: 29px;
+    border: 20px solid transparent;
+    border-bottom: 20px solid #F5F7FB;
+    box-shadow: 0px 5px 5px -5px rgba(29, 33, 38, 0.1);
 }
 
 .friendName {
-
+    margin-bottom: 4px;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0em;
+    color: #000000;
 }
 
 .friendMessageText {
 
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    color: #000000;
 }
 
 .friendTime {
-
+    font-family: Montserrat;
+    font-size: 10px;
+    font-weight: 600;
+    line-height: 12px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #000000;
+    position: absolute;
+    top: 64px;
+    left: 10px;
 }
