--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,55 @@
 .sendForm {
-
+    /*padding-left: 70px;*/
+    padding-bottom: 35px;
+    border-bottom: 1px solid #D9D9D9;
+    width: 86%;
+    margin: 0 auto;
 }
 
 .textarea {
-
+    vertical-align: middle;
+    resize: none;
+    width: 976px;
+    height: 40px;
+    top: 24px;
+    padding: 12px 24px 12px 24px;
+    border: 0px;
+    background-color: #F5F7FB;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
+    border-radius: 20px;
+    overflow: auto;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    margin-right: 44px;
 }
+
 
 .button {
-
+    vertical-align: middle;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+    border: 0px;
+    padding: 10px 39px 10px 38px;
+    background-color: #0066CC;
+    border-radius: 30px;
 }
+
 
 .button:hover {
-
+    background-color: #FFFFFF;
+    color: #0066CC;
+    border: 1px solid #0066CC;
 }
-.button:active {
 
+.button:active {
+    background-color: #000000;
+    color: #0066CC;
 }
