--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,31 +1,78 @@
-.message {
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
+.message {
+    width: 86%;
+    margin: 0 auto;
+    text-align: right;
+    position: relative;
+    margin-bottom: 47px;
 }
 
 .imageAndText {
-
+    display: inline-block;
+position: relative;
 }
 
 .imageAndText img {
-
+    width: 48px;
+    position: absolute;
+    top: 10px;
+    right: -62px;
 }
 
 .text {
-
+    order: 0;
+    display: inline-block;
+    width: 100%;
+    height: 60px;
+    padding: 7px 25px 7px 13px;
+    border-radius: 10px;
+    background: #0066CC;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
 }
 
 .text:after {
-
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: -13px;
+    display: block;
+    width: 1px;
+    height: 29px;
+    border: 20px solid transparent;
+    border-bottom: 20px solid #0066CC;
 }
 
 .name {
+    text-align: right;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0em;
+    color: #FFFFFF;
 
 }
 
 .messageText {
-
+    text-align: right;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    color: #FFFFFF;
 }
 
 .time {
-
+    font-family: Montserrat;
+    font-size: 10px;
+    font-weight: 600;
+    line-height: 12px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #000000;
+    position: absolute;
+    top: 62px;
+    right: -53px;
 }
