--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,29 +1,25 @@
 .friendMessage {
-    width: 86%;
-    margin: 0 auto;
-    text-align: left;
-    position: relative;
     margin-bottom: 47px;
+    position: relative;
+    text-align: left;
 }
 
 .friendImageAndText {
-    display: inline-block;
-    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
 .friendImageAndText img {
     width: 48px;
-    /*position: absolute;*/
-    display: inline-block;
+    display: block;
     padding-top: 10px;
     margin-right: 15px;
     top:10px;
-    vertical-align: bottom;
 }
 
 .friendText {
-    display: inline-block;
-    width: 100%;
+    width: fit-content;
     height: 60px;
     padding: 10px 25px 7px 27px;
     border-radius: 10px;
@@ -35,7 +31,7 @@
     content: "";
     position: absolute;
     bottom: 0;
-    left: 8%;
+    left: 3%;
     display: block;
     width: 1px;
     height: 29px;
@@ -55,7 +51,6 @@
 }
 
 .friendMessageText {
-
     font-family: Montserrat;
     font-size: 16px;
     font-weight: 400;
@@ -65,6 +60,9 @@
 }
 
 .friendTime {
+    position: absolute;
+    top: 64px;
+    left: 10px;
     font-family: Montserrat;
     font-size: 10px;
     font-weight: 600;
@@ -72,7 +70,4 @@
     letter-spacing: 0em;
     text-align: left;
     color: #000000;
-    position: absolute;
-    top: 64px;
-    left: 10px;
 }
