--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,33 +1,34 @@
 .sendForm {
-    /*padding-left: 70px;*/
     padding-bottom: 35px;
     border-bottom: 1px solid #D9D9D9;
-    width: 86%;
-    margin: 0 auto;
 }
 
 .textarea {
-    vertical-align: middle;
-    resize: none;
-    width: 976px;
+    width: 88%;
     height: 40px;
     top: 24px;
+    margin-right: 3%;
     padding: 12px 24px 12px 24px;
     border: 0px;
+    vertical-align: middle;
+    resize: none;
+    overflow: auto;
     background-color: #F5F7FB;
     box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
     border-radius: 20px;
-    overflow: auto;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    margin-right: 44px;
 }
 
 
 .button {
+    width: 8.5%;
+    border: 0px;
+    border-radius: 30px;
+    padding: 10px 39px 10px 38px;
     vertical-align: middle;
     font-family: Montserrat;
     font-size: 16px;
@@ -36,17 +37,14 @@
     letter-spacing: 0em;
     text-align: left;
     color: #FFFFFF;
-    border: 0px;
-    padding: 10px 39px 10px 38px;
     background-color: #0066CC;
-    border-radius: 30px;
 }
 
 
 .button:hover {
+    border: 1px solid #0066CC;
     background-color: #FFFFFF;
     color: #0066CC;
-    border: 1px solid #0066CC;
 }
 
 .button:active {
