--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,16 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 .message {
-    width: 86%;
-    margin: 0 auto;
     text-align: right;
     position: relative;
     margin-bottom: 47px;
+    padding-right: 66px;
 }
 
 .imageAndText {
     display: inline-block;
-position: relative;
+    position: relative;
 }
 
 .imageAndText img {
@@ -21,10 +20,9 @@ position: relative;
 }
 
 .text {
-    order: 0;
-    display: inline-block;
     width: 100%;
-    height: 60px;
+    order: 0;
+    height: fit-content;
     padding: 7px 25px 7px 13px;
     border-radius: 10px;
     background: #0066CC;
@@ -65,6 +63,9 @@ position: relative;
 }
 
 .time {
+    position: absolute;
+    top: 62px;
+    right: 13px;
     font-family: Montserrat;
     font-size: 10px;
     font-weight: 600;
@@ -72,7 +73,4 @@ position: relative;
     letter-spacing: 0em;
     text-align: left;
     color: #000000;
-    position: absolute;
-    top: 62px;
-    right: -53px;
 }
